In sync with srcdeps main repo reorg

--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.hawkular.commons</groupId>
+      <artifactId>hawkular-inventory-paths</artifactId>
+      <version>0.7.3.Final-SRC-revision-f0f00a7c053c92365c1ddc3f747a5b0fbd7c83c6</version>
+    </dependency>
   </dependencies>
 </project>
